tests/snapshots/diagnostics__cd_file_not_found_diagnostic.snap
---
source: tests/diagnostics.rs
assertion_line: 34
info:
  program: ferrish
  args: []
  env:
    USERPROFILE: "[TMPDIR]"
    HOME: "[TMPDIR]"
  stdin: "cd /this/path/does/not/exist\n"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
ferrish::exec::command_error

  × cd: no such file or directory: /this/path/does/not/exist
  ╰─▶ ferrish::fs::not_found
      
        × no such file or directory: /this/path/does/not/exist
         ╭─[<input>:1:4]
       1 │ cd /this/path/does/not/exist
         ·    ────────────┬────────────
         ·                ╰── no such file or directory
         ╰────
