tests/snapshots/diagnostics__command_not_found_diagnostic.snap
---
source: tests/diagnostics.rs
info:
  program: ferrish
  args: []
  stdin: "foobar arg1\n"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
ferrish::command_not_found

  × foobar: command not found
   ╭─[<input>:1:1]
 1 │ foobar arg1
   · ───┬──
   ·    ╰── command not found
   ╰────
